<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_frame_layout" >

                <Button
                    android:id="@+id/btn_screen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/screen"
                    android:background="@drawable/border_frame_layout"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/primary"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_calibrate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calibrate"
                    android:background="@drawable/border_frame_layout"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/primary"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_settings"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/settings"
                    android:background="@drawable/border_frame_layout"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/primary"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/calibrate_buttons_frame"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_frame_layout"
                android:backgroundTint="@color/black"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_calibrate_revert"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/revert"
                    android:background="@drawable/border_frame_layout"
                    android:backgroundTint="@color/primary"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/primaryVeryDark"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/edittext_calibrate_aspect_ratio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/aspect_ratio"
                    android:background="@drawable/border_frame_layout"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textColorHint="@color/primaryDark"
                    android:textColor="@color/primary"
                    android:layout_weight="2"/>

                <EditText
                    android:id="@+id/edittext_calibrate_scale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/scale"
                    android:background="@drawable/border_frame_layout"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textColorHint="@color/primaryDark"
                    android:textColor="@color/primary"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_calibrate_save"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/save"
                    android:background="@drawable/border_frame_layout"
                    android:backgroundTint="@color/primary"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/primaryVeryDark"
                    android:layout_weight="1"/>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/emulated_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/emulator_frame_layout"
                android:layout_gravity="center"
                />

            <FrameLayout
                android:visibility="gone"
                android:id="@+id/frame_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_main_connect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="EMULATOR SCREEN"
                        android:gravity="start"
                        android:textAlignment="textStart"
                        android:textSize="15sp"
                        android:padding="2dp"
                        android:textColor="@color/primaryVeryLight"/>

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:visibility="gone"
                android:id="@+id/frame_calibrate"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_calibrate_aspect_ratio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ASPECT RATIO : 1280 720 [ WIDTH HEIGHT ]"
                        android:gravity="start"
                        android:textAlignment="textStart"
                        android:textSize="15sp"
                        android:padding="2dp"
                        android:textColor="@color/primaryVeryLight"/>

                    <TextView
                        android:id="@+id/text_calibrate_scale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SCALE : 100 [ % ]"
                        android:gravity="start"
                        android:textAlignment="textStart"
                        android:textSize="15sp"
                        android:padding="2dp"
                        android:textColor="@color/primaryVeryLight"/>

                </LinearLayout>

            </FrameLayout>

<!--            <FrameLayout-->
<!--                android:id="@+id/emulated_screen"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:background="@drawable/emulator_frame_layout"-->
<!--                android:layout_gravity="center"-->
<!--                />-->

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>